# RAG_pipeline

./: Dockerfile  README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py
server/: __init__.py  app.py  rag_environment.py
